--- a/Fraud Risk Model- Live Photo.ipynb
+++ b/Fraud Risk Model- Live Photo.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Goal is to Design a Model to Detect Faces and to Validate Customer Identity"
+    "## Goal is Pretty Simple- Detect Live Photo Vs Screengrab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
